--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Herr+Von+Muellerhoff&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="css/styles.css"> <!-- Link to CSS file -->
-    <script src="js/script.js" defer></script> <!-- Link to JS file -->
+    <script src="js/scripts.js" defer></script> <!-- Link to JS file -->
 </head>
 <body>
     <!-- Navigation Bar -->
